apps/emulator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emulator
spec:
  selector:
    app: emulator
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: emulator-lb
spec:
  selector:
    app: emulator
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
